--- a/.env
+++ b/.env
@@ -6,8 +6,9 @@ APP_SECRET_TOKEN=REPLACE_ME_NOW!
 # This is the domain where your Huginn instance will be running. The default should work
 # for development, but it needs to be changed to your Huginn domain when you deploy to a
 # production environment (e.g., yourdomain.com, possibly including a port).
-DOMAIN=localhost:3000
-PORT=3000
+#DOMAIN=localhost:3000
+DOMAIN=localhost
+PORT=4000
 
 # Optionally set an asset host
 # ASSET_HOST=http://assets.example.com
@@ -16,7 +17,6 @@ PORT=3000
 #      Database Setup      #
 ############################
 
-
 DATABASE_ADAPTER=postgresql
 DATABASE_ENCODING=utf8
 DATABASE_RECONNECT=true
@@ -24,9 +24,8 @@ DATABASE_NAME=huginn_development
 DATABASE_POOL=10
 DATABASE_USERNAME=mog
 DATABASE_PASSWORD="blah"
-
 #DATABASE_HOST=your-domain-here.com
-#DATABASE_PORT=3306
+#DATABASE_PORT=5432
 #DATABASE_SOCKET=/tmp/mysql.sock
 
 # MySQL only: If you are running a MySQL server >=5.5.3, you should
@@ -37,7 +36,7 @@ DATABASE_PASSWORD="blah"
 # ==== Additional required production settings ====
 
 # Configure Rails environment.  This should only be needed in production and may cause errors in development.
-# RAILS_ENV=production
+RAILS_ENV=production
 
 # Should Rails force all requests to use SSL?
 FORCE_SSL=false
@@ -164,24 +163,6 @@ AWS_ACCESS_KEY="your aws access key"
 # Set AWS_SANDBOX to true if you're developing Huginn code.
 AWS_SANDBOX=false
 
-#########################
-# Additional Agent gems #
-#########################
-
-# Agent gems can be added to Huginn by specifying them in a comma separated
-# list, the gem version and arguments for the gem command are optional.
-# When not providing a git(hub) repository the gem needs to be published to
-# https://rubygems.org.
-# Check http://bundler.io/v1.11/git.html for a list of valid arguments.
-#
-# Configuration examples:
-#
-# ADDITIONAL_GEMS=huginn_nlp_agents,test_agent
-# ADDITIONAL_GEMS=huginn_nlp_agents(~> 0.2.1),test_agent
-# ADDITIONAL_GEMS=huginn_nlp_agents(git: https://github.com/kreuzwerker/DKT.huginn_nlp_agents.git),test_agent
-# ADDITIONAL_GEMS=huginn_nlp_agents(github: kreuzwerker/DKT.huginn_nlp_agents),test_agent
-# ADDITIONAL_GEMS=huginn_nlp_agents(~> 0.2.1, git: https://github.com/kreuzwerker/DKT.huginn_nlp_agents.git),test_agent
-
 ########################
 #   Various Settings   #
 ########################
@@ -203,7 +184,7 @@ ALLOW_JSONPATH_EVAL=false
 
 # Enable this setting to allow insecure Agents like the ShellCommandAgent.  Only do this
 # when you trust everyone using your Huginn installation.
-ENABLE_INSECURE_AGENTS=false
+ENABLE_INSECURE_AGENTS=true
 
 # Enable this setting to allow second precision schedule in
 # SchedulerAgent.  By default, the use of the "second" field is
